--- a/basicktest/src/main/res/layout/activity_utilk_gesture.xml
+++ b/basicktest/src/main/res/layout/activity_utilk_gesture.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="手势反馈"
-            android:textColor="@color/cok_blue_650"
+            android:textColor="@color/cok_blue_287ff1"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
