--- a/componentktest/src/main/res/layout/item_navigatek.xml
+++ b/componentktest/src/main/res/layout/item_navigatek.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal"
-        android:background="@color/cok_blue_300">
+        android:background="@color/cok_blue_64b5f6">
 
         <TextView
             android:layout_width="wrap_content"
