--- a/uicorek/src/main/res/drawable/textk_edit_rect_bg.xml
+++ b/uicorek/src/main/res/drawable/textk_edit_rect_bg.xml
@@ -12,7 +12,7 @@
         <shape>
             <solid android:color="@android:color/transparent" />
             <corners android:radius="4dp" />
-            <stroke android:width="1dp" android:color="@color/cok_orange_ffa500" />
+            <stroke android:width="1dp" android:color="@color/cok_oran_ffa500" />
         </shape>
     </item>
 </selector>
