--- a/uicorek/src/main/res/drawable/textk_edit_rect_cursor.xml
+++ b/uicorek/src/main/res/drawable/textk_edit_rect_cursor.xml
@@ -9,7 +9,7 @@
 
     <item android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/cok_orange_ffa500" />
+            <solid android:color="@color/cok_oran_ffa500" />
             <size android:width="1dp" />
         </shape>
     </item>
