--- a/uicorek/src/main/res/values/stylesk_layoutk.xml
+++ b/uicorek/src/main/res/values/stylesk_layoutk.xml
@@ -8,22 +8,22 @@
         <item name="layoutKAmount_minVal">0</item>
         <item name="layoutKAmount_maxVal">100</item>
         <item name="layoutKAmount_defaultAmount">0</item>
-        <item name="layoutKAmount_amountTextColor">@color/cok_blue_650</item>
+        <item name="layoutKAmount_amountTextColor">@color/cok_blue_287ff1</item>
         <item name="layoutKAmount_amountBackgroundColor">@android:color/white</item>
         <item name="layoutKAmount_amountMarginHorizontal">0dp</item>
         <item name="layoutKAmount_amountMinWidth">20dp</item>
-        <item name="layoutKAmount_btnTextColor">@color/cok_blue_650</item>
+        <item name="layoutKAmount_btnTextColor">@color/cok_blue_287ff1</item>
         <item name="layoutKAmount_btnTextSize">14sp</item>
-        <item name="layoutKAmount_btnBackgroundColor">@color/cok_gray_350</item>
+        <item name="layoutKAmount_btnBackgroundColor">@color/cok_gray_d2d4d7</item>
         <item name="layoutKAmount_btnSize">20dp</item>
     </style>
 
     <style name="StyleK_LayoutKEmpty_BtnCancel">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:backgroundTint">@color/cok_gray_200</item>
+        <item name="android:backgroundTint">@color/cok_gray_eeeeee</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:shadowColor">@color/cok_gray_200</item>
+        <item name="android:shadowColor">@color/cok_gray_eeeeee</item>
         <item name="android:textSize">14sp</item>
         <item name="cornerRadius">16dp</item>
         <item name="strokeColor">@android:color/darker_gray</item>
@@ -39,13 +39,13 @@
     </style>
 
     <style name="StyleK_LayoutKEditItem_EditAppearance">
-        <item name="inputAppearance_hintColor">@color/cok_blue_050</item>
-        <item name="inputAppearance_inputColor">@color/cok_blue_650</item>
+        <item name="inputAppearance_hintColor">@color/cok_blue_e8f3ff</item>
+        <item name="inputAppearance_inputColor">@color/cok_blue_287ff1</item>
         <item name="inputAppearance_textSize">15sp</item>
     </style>
 
     <style name="StyleK_LayoutKEditItem_LineAppearance">
-        <item name="lineAppearance_color">@color/cok_blue_666</item>
+        <item name="lineAppearance_color">@color/cok_blue_0876e4</item>
         <item name="lineAppearance_height">1.5dp</item>
         <item name="lineAppearance_leftMargin">0dp</item>
         <item name="lineAppearance_rightMargin">0dp</item>
@@ -84,10 +84,10 @@
         <item name="layoutKNavBar_title_textColor">@android:color/black</item>
 
         <item name="layoutKNavBar_subTitle_textSize">14sp</item>
-        <item name="layoutKNavBar_subTitle_textColor">@color/cok_gray_350</item>
+        <item name="layoutKNavBar_subTitle_textColor">@color/cok_gray_d2d4d7</item>
         <item name="layoutKNavBar_subTitle_marginTop">1dp</item>
 
-        <item name="layoutKNavBar_lineColor">@color/cok_gray_200</item>
+        <item name="layoutKNavBar_lineColor">@color/cok_gray_eeeeee</item>
         <item name="layoutKNavBar_lineWidth">0dp</item>
     </style>
 </resources>
