--- a/uicorektest/src/main/res/layout/activity_imagek_binding_adapter.xml
+++ b/uicorektest/src/main/res/layout/activity_imagek_binding_adapter.xml
@@ -21,12 +21,12 @@
         <com.mozhimen.uicorek.imagek.ImageKCircleText
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@color/cok_gray_999"
-            app:imageKCircleText_borderColor="@color/cok_gray_000"
+            android:background="@color/cok_gray_000000"
+            app:imageKCircleText_borderColor="@color/cok_gray_ffffff"
             app:imageKCircleText_borderOverlay="true"
             app:imageKCircleText_borderWidth="2dp"
-            app:imageKCircleText_fillColor="@color/cok_gray_300"
-            app:imageKCircleText_textColor="@color/cok_gray_000"
+            app:imageKCircleText_fillColor="@color/cok_gray_e0e0e0"
+            app:imageKCircleText_textColor="@color/cok_gray_ffffff"
             app:imageKCircleText_textContent="123"
             app:imageKCircleText_textSize="16sp" />
     </LinearLayout>
