--- a/uicorektest/src/main/res/layout/activity_layoutk_btn.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_btn.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/cok_gray_000"
+        android:background="@color/cok_gray_ffffff"
         android:orientation="vertical">
 
         <com.mozhimen.uicorek.layoutk.btn.LayoutKBtnSwitch
@@ -15,6 +15,6 @@
             android:layout_width="70dp"
             android:layout_height="40dp"
             app:layoutKBtnSwitch_defaultStatus="false"
-            app:layoutKBtnSwitch_bgColorOn="@color/cok_blue_633" />
+            app:layoutKBtnSwitch_bgColorOn="@color/cok_blue_4785ef" />
     </LinearLayout>
 </layout>
