--- a/uicorektest/src/main/res/layout/activity_layoutk_refresh_lottie.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_refresh_lottie.xml
@@ -23,9 +23,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/cok_blue_050"
+                    android:background="@color/cok_blue_e8f3ff"
                     android:text="item"
-                    android:textColor="@color/cok_blue_666"
+                    android:textColor="@color/cok_blue_0876e4"
                     android:textSize="20sp"
                     tools:ignore="HardcodedText" />
 
@@ -33,7 +33,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/cok_blue_633"
+                    android:background="@color/cok_blue_4785ef"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -43,7 +43,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/cok_blue_650"
+                    android:background="@color/cok_blue_287ff1"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -53,7 +53,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/cok_blue_666"
+                    android:background="@color/cok_blue_0876e4"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -63,7 +63,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/cok_blue_650"
+                    android:background="@color/cok_blue_287ff1"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -73,7 +73,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/cok_blue_633"
+                    android:background="@color/cok_blue_4785ef"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -82,9 +82,9 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
-                    android:background="@color/cok_blue_050"
+                    android:background="@color/cok_blue_e8f3ff"
                     android:text="item"
-                    android:textColor="@color/cok_blue_666"
+                    android:textColor="@color/cok_blue_0876e4"
                     android:textSize="20sp"
                     tools:ignore="HardcodedText" />
             </LinearLayout>
