--- a/uicorektest/src/main/res/layout/activity_layoutk_refresh_text.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_refresh_text.xml
@@ -22,9 +22,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/cok_blue_050"
+                    android:background="@color/cok_blue_e8f3ff"
                     android:text="item"
-                    android:textColor="@color/cok_blue_666"
+                    android:textColor="@color/cok_blue_0876e4"
                     android:textSize="20sp"
                     tools:ignore="HardcodedText" />
 
@@ -32,7 +32,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/cok_blue_633"
+                    android:background="@color/cok_blue_4785ef"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -42,7 +42,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/cok_blue_650"
+                    android:background="@color/cok_blue_287ff1"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -52,7 +52,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/cok_blue_666"
+                    android:background="@color/cok_blue_0876e4"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -62,7 +62,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/cok_blue_650"
+                    android:background="@color/cok_blue_287ff1"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -72,7 +72,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/cok_blue_633"
+                    android:background="@color/cok_blue_4785ef"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -81,9 +81,9 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
-                    android:background="@color/cok_blue_050"
+                    android:background="@color/cok_blue_e8f3ff"
                     android:text="item"
-                    android:textColor="@color/cok_blue_666"
+                    android:textColor="@color/cok_blue_0876e4"
                     android:textSize="20sp"
                     tools:ignore="HardcodedText" />
             </LinearLayout>
