--- a/uicorektest/src/main/res/layout/activity_layoutk_roll_text.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_roll_text.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/cok_blue_300"
+        android:background="@color/cok_blue_64b5f6"
         android:orientation="vertical"
         tools:context=".layoutk.LayoutKRollTextActivity">
 
