--- a/uicorektest/src/main/res/layout/activity_layoutk_tab_bottom.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_tab_bottom.xml
@@ -18,21 +18,21 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/cok_blue_650" />
+                android:background="@color/cok_blue_287ff1" />
 
             <com.mozhimen.uicorek.layoutk.tab.bottom.TabBottomItem
                 android:id="@+id/layoutk_tab_bottom_more"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/cok_blue_666"  />
+                android:background="@color/cok_blue_0876e4"  />
 
             <com.mozhimen.uicorek.layoutk.tab.bottom.TabBottomItem
                 android:id="@+id/layoutk_tab_bottom_mine"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/cok_blue_650" />
+                android:background="@color/cok_blue_287ff1" />
         </LinearLayout>
     </FrameLayout>
 </layout>
