--- a/uicorek/src/main/res/values/attrsk.xml
+++ b/uicorek/src/main/res/values/attrsk.xml
@@ -66,6 +66,7 @@
     <!--layoutk_loading-->
     <declare-styleable name="LayoutKLoading">
         <attr name="layoutKLoading_loadColor" format="color|reference" />
+        <attr name="layoutKLoading_loadSize" format="dimension|reference" />
     </declare-styleable>
     <!--layoutk_label_group-->
     <declare-styleable name="LayoutKLabelGroup">
