--- a/uicorek/src/main/res/values/colorsk.xml
+++ b/uicorek/src/main/res/values/colorsk.xml
@@ -14,6 +14,7 @@
     <color name="cok_gray_f1f1f1">#f1f1f1</color>
     <color name="cok_gray_eff2f7">#eff2f7</color>
     <color name="cok_gray_eeeeee">#eeeeee</color>
+    <color name="cok_gray_e5e5e5">#e5e5e5</color>
     <color name="cok_gray_e0e0e0">#e0e0e0</color>
     <color name="cok_gray_dfdfdf">#dfdfdf</color>
     <color name="cok_gray_cccccc">#cccccc</color>
