--- a/uicorek/src/main/res/values/themesk.xml
+++ b/uicorek/src/main/res/values/themesk.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
+    <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
+    <!--App-->
+    <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
+
     <style name="ThemeK_MaterialDayNoActionBridge" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge" />
 
     <style name="ThemeK_MaterialDay" parent="Theme.MaterialComponents.DayNight" />
@@ -21,28 +25,38 @@
 
     <style name="ThemeK_AppLightNoAction" parent="Theme.AppCompat.Light.NoActionBar" />
 
-    <style name="ThemeK_AppDayNoAction" parent="Theme.AppCompat.DayNight.NoActionBar" />
-
-    <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
-
     <style name="ThemeK_AppLightNoAction.Translucent">
-        <item name="android:windowTranslucentStatus">true
-        </item><!--设置状态栏半透明状态, true为半透明, false为不透明-->
-        <item name="android:windowTranslucentNavigation">true
-        </item><!--设置导航栏半透明状态, true为半透明, false为不透明-->
+        <!--设置状态栏半透明状态, true为半透明, false为不透明-->
+        <item name="android:windowTranslucentStatus">true</item>
+        <!--设置导航栏半透明状态, true为半透明, false为不透明-->
+        <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
     <style name="ThemeK_AppLightNoAction.Transparent">
-        <item name="android:statusBarColor">@color/cok_transparent</item> <!-- 设置状态栏背景色为透明 -->
-        <item name="android:navigationBarColor">@color/cok_transparent</item> <!-- 设置导航栏背景色为透明 -->
-        <item name="android:windowLightStatusBar" tools:targetApi="m">true
-        </item> <!-- 设置状态栏文字色为深色, true为深色, false为白色 -->
-        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true
-        </item> <!-- 设置导航栏文字色为深色, true为深色, false为白色 -->
+        <!-- 设置状态栏背景色为透明 -->
+        <item name="android:statusBarColor">@color/cok_transparent</item>
+        <!-- 设置导航栏背景色为透明 -->
+        <item name="android:navigationBarColor">@color/cok_transparent</item>
+        <!-- 设置状态栏文字色为深色, true为深色, false为白色 -->
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <!-- 设置导航栏文字色为深色, true为深色, false为白色 -->
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
     </style>
 
+    <style name="ThemeK_AppLightNoAction.FullScreen">
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:statusBarColor">@color/cok_transparent</item>
+        <item name="android:navigationBarColor">@color/cok_transparent</item>
+        <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="o_mr1">shortEdges</item>
+    </style>
+
+    <style name="ThemeK_AppDayNoAction" parent="Theme.AppCompat.DayNight.NoActionBar" />
+
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
-    <!--dialogk-->
+    <!--ThemeK_Dialog-->
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
 
     <style name="ThemeK_Dialog" parent="@android:style/Theme.Dialog" />
