--- a/uicorektest/src/main/res/layout/activity_layoutk.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk.xml
@@ -23,6 +23,18 @@
 
             <com.google.android.material.button.MaterialButton
                 style="@style/UicoreKStyle_Btn"
+                android:onClick="goLayoutKBtn"
+                android:text="goLayoutKBtn"
+                tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/UicoreKStyle_Btn"
+                android:onClick="goLayoutKEdit"
+                android:text="goLayoutKEdit"
+                tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/UicoreKStyle_Btn"
                 android:onClick="goLayoutKLoadRefresh"
                 android:text="goLayoutKLoadRefresh"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
@@ -37,6 +49,12 @@
                 style="@style/UicoreKStyle_Btn"
                 android:onClick="goLayoutKRefresh"
                 android:text="goLayoutKRefresh"
+                tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/UicoreKStyle_Btn"
+                android:onClick="goLayoutKRoll"
+                android:text="goLayoutKRoll"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
 
             <com.google.android.material.button.MaterialButton
@@ -57,11 +75,6 @@
                 android:text="goLayoutKTab"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
 
-            <com.google.android.material.button.MaterialButton
-                style="@style/UicoreKStyle_Btn"
-                android:onClick="goLayoutKBtn"
-                android:text="goLayoutKBtn"
-                tools:ignore="HardcodedText,UsingOnClickInXml" />
 
             <com.google.android.material.button.MaterialButton
                 style="@style/UicoreKStyle_Btn"
@@ -69,11 +82,6 @@
                 android:text="goLayoutKChipGroup"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
 
-            <com.google.android.material.button.MaterialButton
-                style="@style/UicoreKStyle_Btn"
-                android:onClick="goLayoutKEditItem"
-                android:text="goLayoutKEditItem"
-                tools:ignore="HardcodedText,UsingOnClickInXml" />
 
             <com.google.android.material.button.MaterialButton
                 style="@style/UicoreKStyle_Btn"
@@ -83,8 +91,8 @@
 
             <com.google.android.material.button.MaterialButton
                 style="@style/UicoreKStyle_Btn"
-                android:onClick="goLayoutKRollText"
-                android:text="goLayoutKRollText"
+                android:onClick="goLayoutKLoading"
+                android:text="goLayoutKLoading"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
 
             <com.google.android.material.button.MaterialButton
