--- a/basicktest/src/main/res/layout/activity_utilk_file.xml
+++ b/basicktest/src/main/res/layout/activity_utilk_file.xml
@@ -14,6 +14,7 @@
             android:id="@+id/utilk_file_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            tools:listitem="@layout/item_utilk_file_log"
             android:background="@color/black" />
 
     </LinearLayout>
