--- a/basicktest/src/main/res/layout/activity_utilk_java.xml
+++ b/basicktest/src/main/res/layout/activity_utilk_java.xml
@@ -20,5 +20,11 @@
             android:onClick="goManageAllStorage"
             android:text="goManageAllStorage"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/BasicKStyle_Btn"
+            android:onClick="goManageAllStorageByReflect"
+            android:text="goManageAllStorageByReflect"
+            tools:ignore="HardcodedText,UsingOnClickInXml" />
     </LinearLayout>
 </layout>
