--- a/uicorek/src/main/res/values/themesk.xml
+++ b/uicorek/src/main/res/values/themesk.xml
@@ -106,5 +106,12 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="ThemeK_Dialog.Activity">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
+        <item name="android:windowAnimationStyle">@style/AnimK_Theme_Activity</item>
+    </style>
+
     <style name="ThemeK_Dialog_Animation" parent="AnimK_Theme" />
 </resources>
