--- a/uicorek/src/main/res/values/dimensk.xml
+++ b/uicorek/src/main/res/values/dimensk.xml
@@ -30,6 +30,7 @@
     <dimen name="dp_017">17dp</dimen>
     <dimen name="dp_018">18dp</dimen>
     <dimen name="dp_020">20dp</dimen>
+    <dimen name="dp_022">22dp</dimen>
     <dimen name="dp_024">24dp</dimen>
     <dimen name="dp_028">28dp</dimen>
     <dimen name="dp_030">30dp</dimen>
