--- a/uicorek/src/main/res/values/dimensk.xml
+++ b/uicorek/src/main/res/values/dimensk.xml
@@ -22,6 +22,7 @@
     <dimen name="dp_004">4dp</dimen>
     <dimen name="dp_005">5dp</dimen>
     <dimen name="dp_006">6dp</dimen>
+    <dimen name="dp_007">7dp</dimen>
     <dimen name="dp_008">8dp</dimen>
     <dimen name="dp_010">10dp</dimen>
     <dimen name="dp_012">12dp</dimen>
