--- a/componentktest/src/main/res/layout/fragment_second.xml
+++ b/componentktest/src/main/res/layout/fragment_second.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data />
 
@@ -21,10 +22,13 @@
             android:text="第二个Fragment(点击去第一个Fragment)"
             tools:ignore="HardcodedText" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/navigatek_fragment_second_recycler"
+        <fragment
+            android:id="@+id/navigatek_fragment_container"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:defaultNavHost="true" />
 
     </LinearLayout>
 </layout>
