--- a/uicorek/src/main/res/values/colorsk.xml
+++ b/uicorek/src/main/res/values/colorsk.xml
@@ -35,6 +35,7 @@
     <color name="cok_gray_d2d4d7">#d2d4d7</color>
     <color name="cok_gray_a9a9a9">#a9a9a9</color>
     <color name="cok_gray_9e9e9e">#9e9e9e</color>
+    <color name="cok_gray_909090">#909090</color>
     <color name="cok_gray_808080">#808080</color>
     <color name="cok_gray_8a8a8a">#8a8a8a</color>
     <color name="cok_gray_7d7d7d">#7d7d7d</color>
