--- a/uicorek/src/main/res/values/colorsk.xml
+++ b/uicorek/src/main/res/values/colorsk.xml
@@ -29,6 +29,7 @@
     <color name="cok_gray_e5e5e5">#e5e5e5</color>
     <color name="cok_gray_e0e0e0">#e0e0e0</color>
     <color name="cok_gray_dfdfdf">#dfdfdf</color>
+    <color name="cok_gray_cacaca">#cacaca</color>
     <color name="cok_gray_cccccc">#cccccc</color>
     <color name="cok_gray_bdbdbd">#bdbdbd</color>
     <color name="cok_gray_dadada">#dadada</color>
