--- a/componentktest/src/main/res/layout/activity_netk.xml
+++ b/componentktest/src/main/res/layout/activity_netk.xml
@@ -27,5 +27,11 @@
             android:onClick="goNetKHttp"
             android:text="goNetKHttp"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/ComponentKStyle_Btn"
+            android:onClick="goNetKObserver"
+            android:text="goNetKObserver"
+            tools:ignore="HardcodedText,UsingOnClickInXml" />
     </LinearLayout>
 </layout>
