--- a/componentktest/src/main/res/layout/activity_netk_http.xml
+++ b/componentktest/src/main/res/layout/activity_netk_http.xml
@@ -12,8 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context="com.mozhimen.componentktest.netk.http.NetKHttpActivity">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/netk_txt1"
