--- a/uicorektest/src/main/res/layout/activity_imagek_binding_adapter.xml
+++ b/uicorektest/src/main/res/layout/activity_imagek_binding_adapter.xml
@@ -15,7 +15,7 @@
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            app:loadImageBlur="@{R.mipmap.uicorek_img}"
+            app:loadImageBlurGlide="@{R.mipmap.uicorek_img}"
             app:placeholder="@{R.mipmap.uicorek_img}" />
 
         <com.mozhimen.uicorek.imagek.ImageKCircleText
