--- a/uicorektest/src/main/res/layout/activity_layoutk_square.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_square.xml
@@ -25,7 +25,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    app:loadImageRoundedCorner="@{`https://images.pexels.com/photos/2709388/pexels-photo-2709388.jpeg`}"
+                    app:loadImageRoundedCornerGlide="@{`https://images.pexels.com/photos/2709388/pexels-photo-2709388.jpeg`}"
                     app:roundedCornerRadius="@{10}" />
             </com.mozhimen.uicorek.layoutk.LayoutKSquare>
 
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
                 app:imageKSquare_measureMode="measureWidth"
-                app:loadImageRoundedCorner="@{`https://images.pexels.com/photos/2709388/pexels-photo-2709388.jpeg`}"
+                app:loadImageRoundedCornerGlide="@{`https://images.pexels.com/photos/2709388/pexels-photo-2709388.jpeg`}"
                 app:roundedCornerRadius="@{10}" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
