--- a/basicktest/src/main/res/layout/activity_utilk_kotlin.xml
+++ b/basicktest/src/main/res/layout/activity_utilk_kotlin.xml
@@ -17,6 +17,12 @@
 
         <com.google.android.material.button.MaterialButton
             style="@style/BasicKStyle_Btn"
+            android:onClick="goUtilKMd5"
+            android:text="goUtilKMd5"
+            tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/BasicKStyle_Btn"
             android:onClick="goUtilKGenerateNo"
             android:text="goUtilKGenerateNo"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
