--- a/uicorektest/src/main/res/layout/activity_uicorek.xml
+++ b/uicorektest/src/main/res/layout/activity_uicorek.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data />
 
@@ -12,12 +11,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <com.google.android.material.button.MaterialButton
-                style="@style/UicoreKStyle_Btn"
-                android:onClick="goAdaptK"
-                android:text="goAdaptK"
-                tools:ignore="HardcodedText,UsingOnClickInXml" />
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
